# k-means-OpenMP

./: CMakeLists.txt  README.md  k_means_functions.c  k_means_functions.h  main.c  profiler_functions.c
